# Interview.Task

./: .gitignore  CMakeLists.txt  conanfile.py
src/: AbstractShapeButton.cpp  AbstractShapeButton.hpp  App.cpp  App.hpp  CMakeLists.txt  DrawingArea.cpp  DrawingArea.hpp  EllipseButton.hpp  MainWindow.hpp  RectangleButton.hpp  ToolBar.cpp  ToolBar.hpp  TriangleButton.hpp  main.cpp
src/ShapeButtons/: AbstractShapeButton.cpp  AbstractShapeButton.hpp  EllipseButton.hpp
src/Shapes/: AbstractShape.cpp  AbstractShape.hpp  Rectangle.cpp  Rectangle.hpp
